--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
       justify-content: flex-end; 
       color: limegreen; 
       font-family: Impact; 
+      font-weight: lighter;
+      font-size: 10px;
       text-shadow: 10px 10px 10px black;
       ">
       made by elene and amna☺️</p>
