--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <button id="submit">Submit</button>
     </form>
     
-    <img src="https://cdn.discordapp.com/attachments/939870442850746389/1348002441551020147/picmix.com_12480416.gif?ex=67d27dda&is=67d12c5a&hm=1dbe902b10adf4ef8709c3a5831d7a03c5b9763b8128beb609f7eb61adf34cc6&" 
+    <img src="/picmix.com_12480416.gif" 
       alt="Lottie"
       style="width: 100%; height: auto; box-shadow: 10px 10px 20px black">
     
